app_service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
 name: helloworld-python
 namespace: default
spec:
 template:
   spec:
     containers:
       - image: <registry_url>/helloworld-python:latest
