istio_routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-python
  namespace: default
spec:
  hosts:
  - helloworld-python
  http:
  - route:
    - destination:
        host: helloworld-python
        subset: v1
